# dbt-projects

./: .gitignore  README.md  pyproject.toml  requirements.txt
jaffle_shop/: .gitignore  README.md  dbt_project.yml  packages.yml
jaffle_shop/macros/: generate_schema_name.sql
jaffle_shop/models/marts/core/: dim_customers.sql  fct_orders.sql
jaffle_shop/models/metrics/: _time_spine__models.yaml  dim_customers.yml  fct_orders.yml  metricflow_time_spine.sql
jaffle_shop/models/staging/jaffle_shop/: _jaffle_shop__models.yml  _jaffle_shop__sources.yml
jaffle_shop/models/staging/stripe/: stg_stripe__payments.sql
jaffle_shop/tests/: assert_positive_value_for_total_amount.sql
subscription_video_streaming_service/: README.md  dbt_project.yml
subscription_video_streaming_service/data_generation/: generate_dataset.ipynb
subscription_video_streaming_service/models/marts/: accounts.sql  content.sql  subscriptions.sql
subscription_video_streaming_service/models/metrics/: DAU_and_total_view_time.sql  average_rev_per_user_per_month.sql  monthly_new_and_churned_subscribers.sql  rolling_28_day_active_users.sql  subscription_retention_cohort_analysis.sql
subscription_video_streaming_service/models/staging/payments/: _payments__sources.yml  (+1 more)
subscription_video_streaming_service/models/utilities/: time_spine.sql
subscription_video_streaming_service/seeds/: accounts.csv  app_events.csv  content.csv  payments.csv  sessions.csv  subscription_events.csv
text2results/: bigquery_connection.py  text2results.ipynb
text2results_app/: bigquery_connection.py  text2results.ipynb
(+6 files in other folders)
