[project]
name = "dbt_projects"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dbt-bigquery==1.10.1",
    "dbt-core==1.10.6",
    "dbt-metricflow==0.10.1",
    "mercury==2.4.3",
    "openai==1.99.1",
    "python-dotenv==1.1.1",
]
